--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -43,7 +43,7 @@
         </div>
         {% if app.user.spaces is not empty %}
         <div class="user-index-location">
-                <h3>Mes annonces proposées :</h3>
+                <h3>Mes annonces</h3>
 
             <ul class="user-index-location-ul">
             {% for space in app.user.spaces %}
