--- a/templates/space/_form.html.twig
+++ b/templates/space/_form.html.twig
@@ -12,6 +12,7 @@
         {{ form_row(form.location, {'id': 'autocomplete', 'attr': {'class': 'space-form-content'}}) }}
         {{ form_row(form.price, {'attr': {'class': 'space-form-content'}}) }}
         {{ form_row(form.photoFile, {'attr': {'class': 'space-form-content'}}) }}
+        {{ form_row(form.availability, {'attr': {'class': 'flatpick-add'}}) }}
         <div class="new-space-submit">
             {{ form_row(form.enregistrer, {'attr': {'class': 'user-index-submit'}}) }}
         <div>
