--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -126,5 +126,16 @@
 		}
 	</script>
 {% endif %}
+		<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+		<script>
+		flatpickr('.flatpick-reserve', {
+		mode: "multiple",
+		enable: [
+			{% for slot in availability %}
+			"{{ slot }}",
+			{% endfor %}
+		]
+		}
+		)
+		</script>
 {% endblock %}
- 
