day already added are visible when edit the space

--- a/templates/space/_form.html.twig
+++ b/templates/space/_form.html.twig
@@ -18,3 +18,9 @@
         <div>
     {{ form_end(form) }}
 </div>
+ <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+		<script>flatpickr('.flatpick-add', {
+			mode: "multiple",
+			dateFormat: "Y-m-d"
+		})
+        </script>
