--- a/templates/space/edit.html.twig
+++ b/templates/space/edit.html.twig
@@ -3,8 +3,8 @@
 {% block title %}Edit Space{% endblock %}
 
 {% block body %}
-    <div class="user-edit-h1">
-        <h1>Modifier votre annonce</h1>
+   <div class="user-index-h1">
+        <h1>Modifiez votre annonce</h1>
     </div>
 
     {{ include('space/_form.html.twig') }}
