--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edit User{% endblock %}
 
 {% block body %}
-    <div class="user-edit-h1">
+    <div class="user-index-h1">
         <h1>Modifier mon profil</h1>
     </div>
     <div class="user-edit-div-form">
