--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -10,7 +10,7 @@
         {{ form_row(form.avatar) }}
         {{ form_row(form.company) }}
         {{ form_row(form.job) }}
-        {{ form_row(form.enregistrer, {'attr': {'class': 'user-form-enregistrer'}}) }}
+        {{ form_row(form.enregistrer, {'attr': {'class': 'user-index-submit'}}) }}
     {{ form_end(form) }}
 </div>
 
