--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -48,11 +48,13 @@
             <ul class="user-index-location-ul">
             {% for space in app.user.spaces %}
                 <li class="user-index-location-li">
+                <div class="user-spaces">
                     <p>{{ "Nom de l'annonce :" ~ " " ~ space.name }}</p>
                     <div class="show-user-annonce-btns">
                         <a class="user-index-submit" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
                         <a class="user-index-submit" href="{{ path("space_edit", {id: space.id}) }}">Modifier l'annonce</a>
                     </div>
+                </div>
                 </li>
             {% endfor %}
             </ul>
