premium space with their real price

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -52,7 +52,7 @@
 				<div class="spacelocation card-content-down">{{ space.location }}</div>
 				<div id="price">
 					<div class="spaceprice">
-						<span id="spanprice">{{ random(50, 250) }}
+						<span id="spanprice">{{ space.price }}
 							€</span>
 						<span id="spanpriceday">
 							/ jour</span>
