all datas in search spaces are dynamic

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -52,10 +52,7 @@
 				<div class="spacelocation card-content-down">{{ space.location }}</div>
 				<div id="price">
 					<div class="spaceprice">
-						<span id="spanprice">{{ space.price }}
-							€</span>
-						<span id="spanpriceday">
-							/ jour</span>
+						<span id="spanprice">{{ space.price }}€</span><span id="spanpriceday">/jour</span>
 					</div>
 					<a class="show-space-link" id="buttonCardShow" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
 				</div>
