--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -44,7 +44,8 @@
         {% if app.user.spaces is not empty %}
         <div class="user-index-location">
                 <h3>Mes annonces</h3>
-
+<pre>
+</pre>
             <ul class="user-index-location-ul">
             {% for space in app.user.spaces %}
                 <li class="user-index-location-li">
@@ -54,9 +55,30 @@
                         <a class="user-index-submit" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
                         <a class="user-index-submit" href="{{ path("space_edit", {id: space.id}) }}">Modifier l'annonce</a>
                     </div>
+                    {% if space.slots %}
+                    <div class="show-user-annonce-reserved">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Locataire</th>
+                                    <th>Date</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            {% for slot in space.slots|sort %}
+                                <tr>
+                                    <td>{{ slot.owner.firstname }} {{ slot.owner.lastname }}</td>
+                                    <td>{{ slot.slotTime }}</td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    {% endif %}
                 </div>
                 </li>
             {% endfor %}
+
         <h3>Mes resérvations  :</h3>
             {% for slot in app.user.slots %}
         <p>{{ slot.space.name }}</p>
