added controller method and vue for show user profil public

--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -55,7 +55,7 @@
                         <a class="user-index-submit" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
                         <a class="user-index-submit" href="{{ path("space_edit", {id: space.id}) }}">Modifier l'annonce</a>
                     </div>
-                    {% if space.slots %}
+                    {% if space.slots is not empty %}
                     <div class="show-user-annonce-reserved">
                         <table>
                             <thead>
