--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1276,6 +1276,15 @@ input[type=range]:focus::-ms-fill-upper {
     margin: 1rem auto;
 }
 
+.show-user-annonce-reserved-link {
+    color: $color-black;
+    text-decoration: none;
+}
+
+.show-user-annonce-reserved-link:hover {
+    color: $color-cerise-btn;
+}
+
 table, th, td {
     border: solid 1px #000;
     padding: 10px;
