--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -47,11 +47,13 @@
 		<li>{{ space.surface }}m²</li>
 		<li>{{ space.capacity }} postes</li>
 </ul>
-<div class="show-space-description">
-	<div class="marks-image-top"><img src="{{ asset('build/images/mark1.png') }}" alt="marks"/></div>
-	<p class="show-space-description-text">{{ space.description }}</p>
-	<div class="marks-image-bottom"><img src="{{ asset('build/images/mark2.png') }}" alt="marks"/></div>
-</div>
+{% if space.description %}
+	<div class="show-space-description">
+		<div class="marks-image-top"><img src="{{ asset('build/images/mark1.png') }}" alt="marks"/></div>
+		<p class="show-space-description-text">{{ space.description }}</p>
+		<div class="marks-image-bottom"><img src="{{ asset('build/images/mark2.png') }}" alt="marks"/></div>
+	</div>
+{% endif %}
 <div class="show-space-availability">
 	<div class="show-space-availability-week">
 		<div class="show-space-day">
