--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -42,13 +42,12 @@
                 <img class="image-offer" src="{{ asset('build/images/bureauprivee.jpg') }}">
 		    {# {% endif %} #}
 			<figcaption class="text-offer">
+				<div class="text-offer-name">{{ space.name|upper }}</div>
 				<div class="card-border card-content-up cardcontent">
 					<div class="spacecategory card-content-up">{{ space.category|capitalize }}
-						<span class="point">·</span>
 					</div>
 					<div class="spacecapacity card-content-up">{{ space.capacity }}
 						places
-						<span class="point">·</span>
 					</div>
 					<div class="spacesurface card-content-up">{{ space.surface }}
 						m²</div>
