--- a/templates/space/edit.html.twig
+++ b/templates/space/edit.html.twig
@@ -13,3 +13,7 @@
         <a class ="space-form-submit" href="{{ path("space_show", {id: space.id}) }}">Retourner sur l'annonce</a>
     </div>
 {% endblock %}
+
+{% block javascript %}
+    <script src="{{ asset('build/app.js') }}"></script>
+{% endblock %}
