--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -5,25 +5,21 @@
 
 {% block body %}
 <div class="carousel">
-            <div class="carousel-item-mc carousel-item-visible">
-					<img class="image-offer" src="{{ vich_uploader_asset(space) }}" alt="Photo de l'espace"/>
+	{% for image in space.images %}
+		{% if loop.index == 0 %}
+			<div class="carousel-item-mc carousel-item-visible">
+					<img class="image-offer" src="{{ asset('/uploads/' ~ image.name) }}" alt="Image"/>
 			</div>
-            <div class="carousel-item-mc">
-                <img src="{{ asset('build/images/salledereunion.jpg') }}"
-                    alt="salle de reunion" />
-            </div>
-            <div class="carousel-item-mc">
-                <img src="{{ asset('build/images/openspace.jpg') }}"
-                    alt="open space" />
-            </div>
-            <div class="carousel-item-mc">
-                <img src="{{ asset('build/images/espacedestockage.jpg') }}"
-                    alt="espace de stockage" />
-            </div>
-            <div class="carousel-actions">
-                <button id="carousel-button-prev" aria-label="Previous"><</button>
-                <button id="carousel-button-next" aria-label="Next">></button>
-            </div>
+		{% else %}
+			<div class="carousel-item-mc">
+				<img src="{{ asset('/uploads/' ~ image.name) }}" alt="Image"/>
+			</div>
+		{% endif %}
+	{% endfor %}
+	<div class="carousel-actions">
+		<button id="carousel-button-prev" aria-label="Previous"><</button>
+		<button id="carousel-button-next" aria-label="Next">></button>
+	</div>
 </div>
 <div class="show-space-head">
 	<div class="show-space-head-left">
