added premium offer page

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -720,6 +720,12 @@ input[type=submit],
     padding: 10px;
     text-decoration: none;
 }
+
+.premium-offer {
+    h3 {
+    margin-top: 2rem;
+    }
+}
 // Add a background color and some padding around the form
 
 .container {
