--- a/templates/space/_form.html.twig
+++ b/templates/space/_form.html.twig
@@ -17,6 +17,7 @@
             {{ form_row(form.enregistrer, {'attr': {'class': 'user-index-submit'}}) }}
         <div>
     {{ form_end(form) }}
+    <div class="premium-offer"><h3><a href="{{ path('premium') }}">Découvrez notre offre Premium</a></h3></div>
 </div>
  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 		<script>flatpickr('.flatpick-add', {
