--- a/templates/premium.html.twig
+++ b/templates/premium.html.twig
@@ -8,7 +8,8 @@
 	<div class="show-premium-offer-advantage">
 		<ul>
 			<li class"show-premium-offer-li">✅ Pas de limite d'annonce</li>
-			<li class"show-premium-offer-li">✅ Mise en avant de vos annonces</li>
+			<li class"show-premium-offer-li">✅ Meilleure visibilité de vos annonces</li>
+			<li class"show-premium-offer-li">✅ Photos illimités</li>
 		</ul>
 		<a class="show-premium-offer-contact" href="mailto:premiumoffer@marcheconclu.com">Nous contacter pour en profiter</a>
 	</div>
