modified premuim link

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -723,7 +723,8 @@ input[type=submit],
 
 .premium-offer {
     h3 {
-        margin-top: 2rem;
+        font-family: $fontbodini;
+        margin-top: 1rem;
     }
 }
 // Add a background color and some padding around the form
