--- a/templates/space/new.html.twig
+++ b/templates/space/new.html.twig
@@ -10,6 +10,7 @@ Nouvel espace
 	<h1 class="create-new-space"> Déposer une annonce </h1>
 	<div class="new-space-form">
 		{{ include('space/_form.html.twig') }}
+		<div class="premium-offer"><h3><a href="{{ path('premium') }}">Découvrez notre offre Premium</a></h3></div>
 	</div>
 	<div>
 		<script type="text/javascript" src="{{ api }}">
