--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -100,5 +100,13 @@
 	<div class="partner-text">
 		<p class="partner-info">Pour vous assurer une expérience toujours plus simple et sécurisé, nous avons travaillé avec nos partnaires a devolopper des outils pour vous accompagner avec toujours plus de flexibilité dans votre location ou gestion de vos espaces de travail.</p>
 	</div>
-
+</div>
+{# FOOTER #}
+<div class="footer">
+	<ul class="footer-list">
+		<li><a href="/">À Propos</a><li>
+		<li><a href="/">Offre Premium</a><li>
+		<li><a href="/">Nous Contacter</a><li>
+	</ul>
+</div>
 </div></div>{% endblock %}
