added path for each li

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -104,9 +104,9 @@
 {# FOOTER #}
 <div class="footer">
 	<ul class="footer-list">
-		<li><a href="/">À Propos</a><li>
-		<li><a href="/">Offre Premium</a><li>
-		<li><a href="/">Nous Contacter</a><li>
+		<li><a href="{{ path('about') }}">À Propos</a><li>
+		<li><a href="{{ path('premium') }}">Offre Premium</a><li>
+		<li><a href="{{ path('contact') }}">Nous Contacter</a><li>
 	</ul>
 </div>
 </div></div>{% endblock %}
