created html twig for contactus

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -645,6 +645,20 @@ video {
 
 // END PARTNER
 
+// START CONTACT US
+
+.contact-us {
+    border-bottom: 1px solid;
+    color: $color-white;
+    display: flex;
+    font-family: $fontlogo;
+    justify-content: center;
+    margin: 2rem 5rem;
+    padding-bottom: 7px;
+}
+
+// END CONTACT US
+
 // Add Space Form
 
 #space {
