changed div class footer to footer

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -102,11 +102,11 @@
 	</div>
 </div>
 {# FOOTER #}
-<div class="footer">
+<footer>
 	<ul class="footer-list">
 		<li><a href="{{ path('about') }}">À Propos</a><li>
 		<li><a href="{{ path('premium') }}">Offre Premium</a><li>
 		<li><a href="{{ path('contact') }}">Nous Contacter</a><li>
 	</ul>
-</div>
+</footer>
 </div></div>{% endblock %}
