--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -3,6 +3,7 @@
 <div class="login-body">
 	<div class="title">
 	{% include "_logoTitle.html.twig" %}
+	</div>
 </div>
-	<h1 class="contact-us">Nous Contacter</h1>
-	{% endblock %}
+<h1 class="contact-us">Nous Contacter</h1>
+{% endblock %}
