added the content for the aboutus page

--- a/templates/about.html.twig
+++ b/templates/about.html.twig
@@ -1,9 +1,46 @@
 {% extends "base.html.twig" %}
 {% block body %}
-	<div class="login-body">
+	<div class="about-body">
 		<div class="title">
 			{% include "_logoTitle.html.twig" %}
 		</div>
 		<h1 class="about-us">À Propos</h1>
+		<div class="about-us-content">
+			<div class="about-us-value">
+				<h3>✅ Valeurs</h2>
+				<ul>
+					<li><strong>Solidarité</strong> : valorisation de l’économie collaborative en B2B</li>
+					<li><strong>Modernité</strong> : suivi des nouvelles tendances</li>
+					<li><strong>Flexibilité</strong> : des solutions à court, moyen et long terme</li>
+					<li><strong>Rentabilité</strong> : vers un modèle économique rentable pour les sociétés</li>
+				</ul>
+			</div>
+			<div class="about-us-mission">
+				<h3>✅ Mission</h2>
+				<p>Repenser les lieux, les espaces de travail des professionnels pour
+	les mener vers des solutions plus souples et plus modernes.</p>
+			</div>
+			<div class="about-us-vision">
+				<h3>✅ Visions</h2>
+				<p>Vers des espaces de travail (administratif/stockage) hybrides, nomades et
+	flexibles, une solution qui s’adapte aux mutations de l’environnement.</p>
+			</div>
+			<div class="about-us-promesse">
+				<h3>✅ Promesse</h2>
+				<p>« Accélérateur de business »
+	Parce que votre siège se trouve ici, mais votre entreprise doit
+	rayonner partout.</p>
+			</div>
+			<div class="about-us-cibles">
+				<h3>✅ Cibles</h2>
+				<p>Professionnels ayant des espaces à louer et ceux en recherche d’espaces à
+	louer sur des courtes et moyennes durées.</p>
+			</div>
+			<div class="about-us-ambition">
+				<h3>✅ Ambition</h2>
+				<p>Repenser le modèle de location d’espaces pour les professionnels en séduisant tous les acteurs
+	économiques du marché détenant des espaces à louer ou désireux de louer des espaces.</p>
+			</div>
+		</div>
     </div>
 {% endblock %}
