--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -648,6 +648,17 @@ video {
 
 // START ABOUT US
 
+.about-body {
+    background-color: $color-cerise;
+    font-family: $fontbodini;
+}
+
+.about-us-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .about-us {
     border-bottom: 1px solid;
     color: $color-white;
@@ -657,6 +668,39 @@ video {
     margin: 2rem 5rem;
     padding-bottom: 7px;
 }
+
+.about-us-value {
+    background-color: $color-white;
+    border-radius: 1rem;
+    font-family: $fontworksans;
+    height: auto;
+    margin: 1rem;
+    padding: 1rem 2rem;
+    width: 85%;
+
+    li {
+       font-size: .75rem; 
+    }
+}
+
+.about-us-mission,
+.about-us-vision,
+.about-us-promesse,
+.about-us-cibles,
+.about-us-ambition {
+    background-color: $color-white;
+    border-radius: 1rem;
+    font-family: $fontworksans;
+    height: auto;
+    margin: 1rem;
+    padding: 1rem 2rem;
+    width: 85%;
+
+    p {
+        margin: 0;
+    }
+
+    }
 
 // END ABOUT US
 
