--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -484,7 +484,7 @@ a {
     color: $color-cerise-btn;
     font-family: $fontbodini;
     font-weight: 800;
-    text-align: center;
+    margin-left: 1rem;
 }
 
 .show-cardcontent {
