replace tile name space

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -484,7 +484,7 @@ a {
     color: $color-cerise-btn;
     font-family: $fontbodini;
     font-weight: 800;
-    margin-left: 1rem;
+    margin: 1rem 0rem 0rem 1rem;
 }
 
 .show-cardcontent {
