change Images to Image,  to  and  to

--- a/templates/images/index.html.twig
+++ b/templates/images/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ImagesController!{% endblock %}
+{% block title %}Hello ImageController!{% endblock %}
 
 {% block body %}
 <style>
@@ -13,7 +13,7 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code><a href="{{ '/home/wilder/Documents/PROJET/reims-202109-php-project3-marche-conclu/src/Controller/ImagesController.php'|file_link(0) }}">src/Controller/ImagesController.php</a></code></li>
+        <li>Your controller at <code><a href="{{ '/home/wilder/Documents/PROJET/reims-202109-php-project3-marche-conclu/src/Controller/ImageController.php'|file_link(0) }}">src/Controller/ImageController.php</a></code></li>
         <li>Your template at <code><a href="{{ '/home/wilder/Documents/PROJET/reims-202109-php-project3-marche-conclu/templates/images/index.html.twig'|file_link(0) }}">templates/images/index.html.twig</a></code></li>
     </ul>
 </div>
