--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -1,9 +1,16 @@
 {% extends "base.html.twig" %}
 {% block body %}
-<div class="login-body">
+<div class="contact-us-body">
 	<div class="title">
 	{% include "_logoTitle.html.twig" %}
 	</div>
 	<h1 class="contact-us">Nous Contacter</h1>
+	<div class="contact-us-content">
+		<h3 class="contact-us-content-text">Une question ? N'hésitez pas à nous contacter par mail ou téléphone</h3>
+		<div class="contact-us-content-contact">
+			<a class="contact-us-content-link" href="mailto:contact@marcheconclu.com">📧 Email</a>
+			<a class="contact-us-content-link" href="tel:+33600000000">📞 Téléphone</a>
+		</div>
+	</div>
 </div>
 {% endblock %}
