fix the closing li element

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -100,9 +100,9 @@
 {# FOOTER #}
 <footer>
 	<ul class="footer-list">
-		<li><a href="{{ path('about') }}">À Propos</a><li>
-		<li><a href="{{ path('premium') }}">Offre Premium</a><li>
-		<li><a href="{{ path('contact') }}">Nous Contacter</a><li>
+		<li><a href="{{ path('about') }}">À Propos</a></li>
+		<li><a href="{{ path('premium') }}">Offre Premium</a></li>
+		<li><a href="{{ path('contact') }}">Nous Contacter</a></li>
 	</ul>
 </footer>
 </div></div>{% endblock %}
