--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -704,7 +704,7 @@ video {
 .about-us {
     border-bottom: 1px solid;
     color: $color-white;
-    margin: 0rem 1rem;
+    margin: 0rem 5rem 1rem;
     padding: 1rem;
     text-align: center;
 }
