deleted the letter-spacing of the last letter

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -132,7 +132,9 @@ a {
         font-weight: 400;
         letter-spacing: .7rem;
         margin: 0;
+        margin-right: -.7em;
     }
+
 }
 
 .form-search {
