--- a/templates/premium.html.twig
+++ b/templates/premium.html.twig
@@ -11,7 +11,7 @@
 			<li class"show-premium-offer-li">✅ Meilleure visibilité de vos annonces</li>
 			<li class"show-premium-offer-li">✅ Photos illimités</li>
 		</ul>
-		<a class="show-premium-offer-contact" href="mailto:premiumoffer@marcheconclu.com">Nous contacter pour en profiter</a>
+		<a class="show-premium-offer-contact" href="">Souscrire à l'offre Premium</a>
 	</div>
 </div>
 </div>
