--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -4,7 +4,6 @@
     <div class="user-index-h1">
         <h1>Mes informations</h1>
     </div>
-    {% if app.user %}
     <div class="show-user-disconnect">
          <a class="user-index-submit" href="{{ path('app_logout') }}">Deconnexion</a>
     </div>
@@ -44,8 +43,6 @@
         {% if app.user.spaces is not empty %}
         <div class="user-index-location">
                 <h3>Mes annonces</h3>
-<pre>
-</pre>
             <ul class="user-index-location-ul">
             {% for space in app.user.spaces %}
                 <li class="user-index-location-li">
@@ -78,17 +75,41 @@
                 </div>
                 </li>
             {% endfor %}
-
-        <h3>Mes resérvations  :</h3>
-            {% for slot in app.user.slots %}
-        <p>{{ slot.space.name }}</p>
-        <p>Jour de la réservation : {{ slot.slottime }}</p>
-            <div class="show-user-annonce-btns">
-        <a class="user-index-submit" href="{{ path("slot_delete", {id: slot.id}) }}">Annuler la réservation</a>
+        {% endif %}
+        {% if app.user.slots is not empty %}
+        <div class="show-user-annonce-slots-content">
+            <h3>Mes resérvations  :</h3>
+            <div class="show-user-annonce-slots">
+                <div class="show-user-annonce-slots-table">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Espace</th>
+                            <th>Date</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% for slot in app.user.slots %}
+                        <tr>
+                            <td><a class="show-user-annonce-slots-link" href="">{{ slot.space.name }}</a></td>
+                            <td>{{ slot.slotTime }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                </div>
+                <div class="show-user-annonce-slots-cancel">
+                {% for slot in app.user.slots %}
+                    <form method="post" action="{{ path('slot_delete', {'id': slot.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ slot.id) }}">
+                        <button class="user-index-submit">Annuler</button>
+                    </form>
+                {% endfor %}
+                </div>
+            </div>
+        </div>
     </div>
-        {% endfor %}
             </ul>
         {% endif %}
         </div>
-    {% endif %}
 {% endblock %}
