User nullable=true for photo, compagny and job; fixed error return type in test

--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -30,9 +30,9 @@
                 <p>{{ "✉️ " ~ app.user.email }}</p>
             </div>
             <div class="show-user-job">
-                {% if app.user.job %}
+                {# {% if app.user.job %}
                     <p>{{ "⚙️ " ~ app.user.job }}</p>
-                {% endif %}
+                {% endif %} #}
                 {% if app.user.company %}
                     <p>{{ "🏢 " ~ app.user.company }}</p>
                 {% endif %}
