--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -91,7 +91,7 @@
                     <tbody>
                     {% for slot in app.user.slots %}
                         <tr>
-                            <td><a class="show-user-annonce-slots-link" href="">{{ slot.space.name }}</a></td>
+                            <td><a class="show-user-annonce-slots-link" href="{{ path("space_show", {id: slot.space.id}) }}">{{ slot.space.name }}</a></td>
                             <td>{{ slot.slotTime }}</td>
                         </tr>
                     {% endfor %}
@@ -100,7 +100,7 @@
                 </div>
                 <div class="show-user-annonce-slots-cancel">
                 {% for slot in app.user.slots %}
-                    <form method="post" action="{{ path('slot_delete', {'id': slot.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                    <form method="post" action="{{ path('slot_delete', {'id': slot.id, 'space': slot.space.id}) }}" onsubmit="return confirm('Vous vous vraiment annuler cette location?');">
                         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ slot.id) }}">
                         <button class="user-index-submit">Annuler</button>
                     </form>
