finished cancel slot

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1472,6 +1472,7 @@ input[type=range]:focus::-ms-fill-upper {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
 }
 
 .show-user-annonce-slots {
