--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -38,10 +38,7 @@
         </div>
         <div class="show-user-annonce-btns">
             {% if user.email %}
-                <a class="user-index-submit" href="mailto:{{ user.email }}">📧 Email</a>
-            {% endif %}
-            {% if user.phoneNumber %}
-                <a class="user-index-submit" href="tel:+33{{ user.phoneNumber }}">📞 Téléphone</a>
+                <a class="user-index-submit" href="{{ path("send", {slug: user.slug}) }}">📧 Envoyer un message </a>
             {% endif %}
         </div>
 {% endblock %}
