--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -488,7 +488,7 @@ a {
 
 .text-offer-name {
     color: $color-cerise-btn;
-    font-family: $fontbodini;
+    font-family: $fontworksans;
     font-weight: 800;
     margin: 1rem 0rem 0rem 1rem;
 }
