--- a/templates/space/edit.html.twig
+++ b/templates/space/edit.html.twig
@@ -10,6 +10,9 @@
     <div class="space-form-submit-div">
         <a class ="space-form-submit" href="{{ path("space_show", {id: space.id}) }}">Retourner sur l'annonce</a>
     </div>
+    <div class="space-form-submit-div">
+        <a class ="space-form-submit" href="{{ path("space_show", {id: space.id}) }}">Retourner sur l'annonce</a>
+    </div>
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 		<script>flatpickr('.flatpick-add', {
 			mode: "multiple",
